estructura basica de html5

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>puls4: Comunidad para gente atractiva y millonaria</title>
+	<link rel="stylesheet" type="text/css" href="css/puls4.css">
 </head>
 <body>
 	
+hola chicos
 
-	Hola k ase
+
+
 </body>
 </html>
