--- a/index.html
+++ b/index.html
@@ -7,9 +7,29 @@
 </head>
 <body>
 	
-hola chicos
-
-
+<header>
+<div class="logo">
+	<img src="imagenes/logo.png" alt="Puls4"/>
+</div>
+<div class="titulo">
+	<h1 class="titulo">Puls4: comunidad profesional de gente atractiva</h1>
+	<a class="filtro" href="#"></a>
+	<a class="publicar" href="#">Publicar</a>
+</div>
+<div class="usuario">
+	<figure class="avatar">
+		<img src="imagenes/avatar.png" alt="william"/>
+	</figure>
+	<a class="flechita" href="#">x</a>
+</div>
+ </header>
+<nav></nav>
+<section></section>
+<footer>
+	
+	<h3 class="powered"><strong>Powered by Platzy</strong></h3>
+	<span class="mejor">mejorandola.la 2013</span>
+</footer>
 
 </body>
 </html>
