--- a/index.html
+++ b/index.html
@@ -18,13 +18,63 @@
 </div>
 <div class="usuario">
 	<figure class="avatar">
-		<img src="imagenes/avatar.png" alt="william"/>
+		<img src="imagenes/avatar.png" alt="william "/>
 	</figure>
 	<a class="flechita" href="#">x</a>
 </div>
  </header>
-<nav></nav>
-<section></section>
+<nav>
+	<ul class="menu">
+		<li> <a href="#">Python</a></li>
+		<li> <a href="#">HTML5</a></li>
+		<li> <a href="#">Javascript</a></li>
+		<li> <a href="#">Django</a></li> 
+		<li> <a href="#">CSS3</a></li> 
+
+	 </ul>
+
+
+</nav>
+<section class="posts">
+	
+<article class="posts">
+
+<div class="descripcion" >
+	<figure class="imagen">
+		<img src="imagenes/foto.jpg">
+	 </figure>
+
+<div class="detalles"> 
+	<h2 class="titulo">
+	Modulo de usuarios : Lista y Paginacion con Laravel
+</h2> 
+<p class="autor"> por <a href="#">William HC</a> 
+</p>
+<a class="tag" href="#">Django</a>
+
+<p class="fecha">Hace <strong>20</strong> min</p>
+</div>
+
+</div>	
+
+<div class="acciones">
+<div class="votos">
+	<a class="up" href=="#">U</a>
+	<span class="total">150</span>
+	<a class="down" href=="#">D</a>
+
+</div>
+<div class="datos">
+	<a class="comentario" href=="#">10</a>
+	<a class="estrellita" href=="#">*</a>
+
+</div>
+ </div>
+</article>
+
+
+
+</section>
 <footer>
 	
 	<h3 class="powered"><strong>Powered by Platzy</strong></h3>
