primera parte del video

--- a/index.html
+++ b/index.html
@@ -3,22 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>puls4: Comunidad para gente atractiva y millonaria</title>
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/puls4.css">
 </head>
 <body>
 	
 <header>
-<div class="logo">
+<div class="logo left">
 	<img src="imagenes/logo.png" alt="Puls4"/>
 </div>
-<div class="titulo">
-	<h1 class="titulo">Puls4: comunidad profesional de gente atractiva</h1>
+<div class="titular ">
+	<h1 class="titulo">
+
+		Puls4: comunidad profesional de gente atractiva
+
+	</h1>
+
 	<a class="filtro" href="#"></a>
-	<a class="publicar" href="#">Publicar</a>
+	<a class="publicar" href="#">Publicar Design Publicar</a>
 </div>
 <div class="usuario">
 	<figure class="avatar">
-		<img src="imagenes/avatar.png" alt="william "/>
+		<img src="imagenes/avatar.jpg" alt="william "/>
 	</figure>
 	<a class="flechita" href="#">x</a>
 </div>
